# sc-repl-mcp

./: .gitignore  CLAUDE.md  README.md  mcp_synthdefs.scd  metallic_synth.scd  pyproject.toml  sc_repl_mcp.py
docs/: audio-analysis-exploration.md
sc_repl_mcp/: __init__.py  client.py  config.py  main.py  midi.py  sclang.py  syntax.py  tools.py  types.py  utils.py
sc_repl_mcp/grammars/: .gitkeep
scripts/: build_grammar.py
src/: index.ts  sc-client.ts
tests/: __init__.py  conftest.py  test_client_handlers.py  test_midi.py  test_sclang.py  test_syntax.py  test_tools.py  test_types.py  test_utils.py
