[project]
name = "sc-repl-mcp"
version = "1.0.0"
description = "MCP server for SuperCollider REPL integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-osc>=1.8.0",
    "tree-sitter>=0.21.0,<0.22.0",  # Pinned for build_library support
    "mido>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
sc-repl-mcp = "sc_repl_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include compiled grammar files
artifacts = ["sc_repl_mcp/grammars/*.so", "sc_repl_mcp/grammars/*.dylib"]
